# sdk-cubic

./: .env  .gitignore  .gitmodule  .gitmodules  Jenkinsfile  Makefile  Package.resolved  Package.swift  README.md  install.sh  jitpack copy.yml  jitpack.yml  package-lock.json  package.java.sh  pom.xml
ci/: Dockerfile  validate_generated_artifacts.sh
cubicsvr-client/: .gitignore  README.md  go.mod  go.sum
cubicsvr-client/cmd/: models.go  root.go  transcribe-list.go  transcribe-single.go  transcribe.go  version.go
cubicsvr-client/testdata/: list.txt
docs/: 404.html  index.html  index.json  index.xml  sitemap.xml
docs-src/: config.toml  go.mod  go.sum
docs-src/content/: _header.md  _index.md
docs/_header/: index.html
docs/categories/: index.html  index.xml
docs/cli/: index.html  index.xml
docs/getting-started/: index.html  index.xml
docs/js/: tabs.js
docs/protobuf/: index.html  index.xml
docs/tags/: index.html  index.xml
docs/using-cubic-sdk/: index.html  index.xml
examples/: config.sample.toml
examples/android/: README.md  build.gradle
examples/android-app/: build.gradle  settings.gradle
examples/c#/: CubicClient.sln  README.md
examples/cpp/: .gitignore  CMakeLists.txt  README.md  demo_config.cpp  demo_config.h  main.cpp  recorder.cpp  recorder.h  timer.cpp  timer.h
examples/cubic-demo/: Podfile
examples/ios/: .gitignore  Podfile  README.md
grpc/: Makefile  cubic.proto  doc.md.tmpl
grpc/android-cubic/: .gitignore  build.gradle  settings.gradle
grpc/cpp-cubic/: CMakeLists.txt  CobaltGRPC.cmake  README.md  cubic_client.cpp  cubic_client.h  cubic_exception.cpp  cubic_exception.h  cubic_model.cpp  cubic_model.h  cubic_recognizer_stream.cpp  cubic_recognizer_stream.h
grpc/csharp-cubic/: cubic.csproj
grpc/go-cubic/: client.go  client_test.go  go.mod  go.sum  tls_test.go
grpc/ios-cubic/: Podfile
grpc/java-cubic/: generator_pom_template.sh  pom_template.sh
grpc/java-lite-cubic/: generator_pom_template.sh
grpc/node-cubic/: package-lock.json  package.json  rollup.config.ts  tsconfig.json
grpc/py-cubic/: setup.py
grpc/rust/: cubic.rs
(+293 files in other folders)
